# claude-code-courseware

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.claude/: settings.json  settings.local.json
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: developer-permissions.md  fork-your-own.md
modules/: 01-vertex-setup.md  02-atlassian-mcp.md  02-writing-claude-md.md  03-memory-mcp.md  04-git-mcp.md  05-atlassian-mcp.md  05-red-hat-quick-deck.md  05-writing-claude-md.md  06-playwright-mcp.md  07-notion-mcp.md  07-writing-custom-skills.md  08-container-podman-mcp.md  08-hivemind-knowledge-base.md  09-jira-plugin.md  09-writing-custom-skills.md  10-hooks.md  11-building-mcp-servers.md  12-review-agents.md  13-agent-teams-vs-superpowers.md  13-red-hat-quick-deck.md  14-agent-teams-vs-superpowers.md  (+15 more)
rhdp-flow-csv/: README.md  pyproject.toml
rhdp-flow-csv/src/rhdp_flow_csv/: __init__.py  __main__.py  bulk_update.py  constants.py  diff.py  fix.py  multi_asset.py  server.py  transform.py
rhdp-flow-csv/tests/: __init__.py  conftest.py  test_bulk_update.py  test_constants.py  test_diff.py  test_fix.py  test_multi_asset.py  test_transform.py
rhdp-flow-csv/tests/fixtures/: broken_dates.csv  messy_runbook.csv  multi_asset_wrong.csv  valid_flow.csv
rhdp-flow-intel/: README.md  pyproject.toml
rhdp-flow-intel/src/rhdp_flow_intel/: __init__.py  __main__.py  api_client.py  dashboard.py  diff.py  ghosts.py  monitor.py  patterns.py  server.py  troubleshoot.py
rhdp-flow-intel/tests/: conftest.py  test_ghosts.py  test_monitor.py  test_troubleshoot.py
(+107 files in other folders)
