[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhdp-flow-csv"
version = "0.1.0"
description = "MCP server for RHDP-Flow CSV file operations -- transform, fix, expand, diff"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pandas>=2.0.0",
    "pytz>=2024.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
