[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhdp-flow-intel"
version = "0.1.0"
description = "MCP server for RHDP-Flow deployment intelligence -- monitor, detect, diagnose"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
